add and delete holiday feature

--- a/src/app/components/landingpage/landingpage.component.scss
+++ b/src/app/components/landingpage/landingpage.component.scss
@@ -3,7 +3,7 @@
 // }
 .body {
     height: 100vh;
-    background-color: var(--tui-primary);
+    background-color: var(--tui-primary-active);
     color: white;
     .hero-section {
         display: flex;
