--- a/src/app/client/leave-form/leave-form.component.html
+++ b/src/app/client/leave-form/leave-form.component.html
@@ -1,5 +1,5 @@
 <div class="container py-3">
-  <div class="form card my-3 py-3 container">
+  <div class="form card-shadow my-3 p-5 container">
     <tui-loader [overlay]="true" [showLoader]="load">
     <form [formGroup]="leaveForm" (ngSubmit)="onSubmit()">
       <h3 class="text-center my-3">Apply Leave</h3>
