--- a/src/app/client/leave-list/leave-list.component.html
+++ b/src/app/client/leave-list/leave-list.component.html
@@ -25,10 +25,22 @@
   <!-- Symbol Column -->
   <ng-container matColumnDef="to">
     <th mat-header-cell *matHeaderCellDef>To</th>
-    <td mat-cell *matCellDef="let element">{{ element.to }}</td>
+    <td mat-cell *matCellDef="let element" >
+      <span *ngIf="element.to">
+        {{ element.to  | date : "dd-MMMM-yyyy"}}
+      </span>
+      <span *ngIf="!element.to">
+        NA
+      </span>
+    </td>
   </ng-container>
 
-  <ng-container matColumnDef="action">
+  <ng-container matColumnDef="status">
+    <th mat-header-cell *matHeaderCellDef>Status</th>
+    <td mat-cell *matCellDef="let element" [class]="element.status">{{ element.status | uppercase}}</td>
+  </ng-container>
+
+  <ng-container matColumnDef="action" >
     <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let element">
       <button
