--- a/src/app/client/leave-request/leave-request.component.html
+++ b/src/app/client/leave-request/leave-request.component.html
@@ -14,7 +14,9 @@
 
       <app-leave-form (update)="update($event)"></app-leave-form>
     </mat-tab>
-    <mat-tab label="Pending"> <app-leave-list [ID]="id"></app-leave-list> </mat-tab>
-    <mat-tab label="Completed"> Content 3 </mat-tab>
+    <mat-tab label="Pending"> <app-leave-list [ID]="id"  [type]="'pending'"></app-leave-list> </mat-tab>
+    <mat-tab label="Completed">
+      <app-leave-list [ID]="id" [type]="'completed'"></app-leave-list>
+    </mat-tab>
   </mat-tab-group>
 </div>
