--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    background-color: var(--tui-primary);
+    background-color: var(--tui-primary-active);
     color: white;
 
     p {
