--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -7,17 +7,17 @@
   color: white;
 }
 
-.is-active {
-  background-color: rgba(rgb(83, 74, 74),.5);
 
+.is-active {
+  background-color: rgba(rgb(110, 101, 101),.5);
 }
 
 .sidenav {
   width: 200px;
 }
 
-// .mat-toolbar.mat-primary {
-//   position: sticky;
-//   top: 0;
-//   z-index: 1;
-// }
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
