--- a/src/app/manage-holidays/list-holidays/list-holidays.component.html
+++ b/src/app/manage-holidays/list-holidays/list-holidays.component.html
@@ -1,19 +1,18 @@
 <div class="body container">
-  <div class="py-3 d-flex justify-content-between align-items-center">
+  <div class="pt-2 pt-lg-5 d-flex justify-content-between align-items-center">
     <input
       matInput
-      (keyup)="filterHolidays(filter.value)"
+      (input)="filterHolidays(filter.value)"
       placeholder="Filter"
       name="filterText"
       #filter
     />
 
-    <div>
+    <div class="d-flex gap-1 align-items-center">
       <tui-svg
-        src="tuiIconRefreshCw"
+        src="tuiIconRefreshCwLarge"
         class="me-2"
         [ngClass]="loader ? 'rotate' : ''"
-        size="s"
         type="button"
         (click)="loadHolidays()"
       ></tui-svg>
@@ -21,25 +20,38 @@
         tuiButton
         appearance="secondary"
         (click)="sortHolidays()"
-        size="s"
+        size="m"
         type="button"
       >
         Sort
         <tui-svg src="tuiIconSortOff"></tui-svg>
       </button>
+      <button tuiButton size="m" (click)="showDialog(form)" class=" d-none d-md-inline">
+        Add <tui-svg src="tuiIconPlus"></tui-svg>
+    
+        <!-- add user form -->
+        <ng-template let-observer #form>
+          <app-holidayform
+            [observer]="observer"
+            (done)="observer.complete();addAlert();"
+            [edit]="false"
+          ></app-holidayform>
+        </ng-template>
+      </button>
     </div>
+
   </div>
 
   <tui-loader size="xl" class="mt-3" [showLoader]="loader" [overlay]="true">
     <div class="row">
       <div
         class="col-12 col-md-4 col-lg-4 my-2"
-        *ngFor="let item of holidays; let i = index"
+        *ngFor="let item of holidays"
       >
         <a
           size="l"
-          class="island-card"
-          [ngClass]="upcomingDate(item.date) ? 'bg-green ' : 'bg-grey'"
+          class="card"
+          [ngClass]="upcomingDate(item.date) ? 'bg-green' : 'bg-grey'"
           tuiIsland
           [hoverable]="true"
         >
@@ -53,10 +65,12 @@
 
                 <ng-template #editform let-observer>
                   <app-holidayform
-                    [index]="i"
+                    [Index]="item.key"
                     [Name]="item.name"
                     [type]="item.type"
                     [date]="item.date"
+                    [edit]="true"
+                    (done)="observer.complete();addAlert();"
                   ></app-holidayform>
                 </ng-template>
               </div>
@@ -76,4 +90,16 @@
       </div>
     </div>
   </tui-loader>
+  <button tuiButton   size="l" (click)="showDialog(form)" class="add-mobile d-block d-md-none">
+    Add <tui-svg src="tuiIconPlus"></tui-svg>
+
+    <!-- add holiday form -->
+    <ng-template let-observer #form>
+      <app-holidayform
+        [observer]="observer"
+        (done)="observer.complete();addAlert();"
+        [edit]="false"
+      ></app-holidayform>
+    </ng-template>
+  </button>
 </div>
