--- a/src/app/manage-holidays/list-holidays/list-holidays.component.scss
+++ b/src/app/manage-holidays/list-holidays/list-holidays.component.scss
@@ -10,8 +10,18 @@
     input {
         border: 0;
         border-bottom: 1px solid rgba(black,.1);
-        padding: .5rem;
+        font-size: 1rem;
+        &:hover {
+          border-bottom: 1px solid rgba(black, 0.5);
+        }
+        padding:1rem .5rem;
     }
+    .add-mobile {
+        box-shadow: #121212 1px 1px 10px -7px;
+        position: fixed;
+        bottom: 5vh;
+        right: 1rem;
+      }
 }
 .rotate{
     animation: rot 1s linear infinite;
@@ -30,24 +40,17 @@
     border-radius: 100%;
     width: 3rem;
     height: 3rem;
+    background-color: lightgray;
     *{
         color: black !important;
     }
 }
 
 .bg-green {
-    outline:1px solid var(--tui-success-bg-night);
-    background-color: var(--tui-success-bg-night);
+    border-left:10px solid var(--tui-success-bg-night);
     color:var(--tui-positive);
-    &:hover {
-        outline:1px solid var(--tui-success-bg-night-hover);
-    }
 }
 .bg-grey {
-    outline:1px solid var(--tui-info-bg-night);
-    background-color: var(--tui-info-bg-night);;
+    border-left:10px solid var(--tui-info-bg-night);
     color:var(--tui-link);
-    &:hover {
-        outline:1px solid var(--tui-info-bg-night-hover);
-    }
 }
