--- a/src/app/manage-holidays/holidayform/holidayform.component.html
+++ b/src/app/manage-holidays/holidayform/holidayform.component.html
@@ -37,6 +37,7 @@
         tuiButton
         appearance="secondary-destructive"
         (click)="onDelete()"
+        *ngIf="edit"
       >
         Delete Holiday
       </button>
