--- a/src/app/manage-employees/list-employees/list-employees.component.html
+++ b/src/app/manage-employees/list-employees/list-employees.component.html
@@ -2,7 +2,6 @@
   <!-- View employee list -->
 
   <div class="pt-1 pt-lg-5">
-
     <div class="d-flex justify-content-between align-items-center mb-3">
       <input
         matInput
@@ -197,7 +196,7 @@
 
       </div>
     </tui-loader>
-    <button tuiButton appearance="secondary"  size="l" (click)="showDialog(form)" class="add-mobile d-block d-md-none">
+    <button tuiButton size="l" (click)="showDialog(form)" class="add-mobile d-block d-md-none">
       Add <tui-svg src="tuiIconUserPlus"></tui-svg>
 
       <!-- add user form -->
