--- a/src/app/manage-employees/list-employees/list-employees.component.scss
+++ b/src/app/manage-employees/list-employees/list-employees.component.scss
@@ -20,6 +20,7 @@
     border: 0;
     border-bottom: 1px solid rgba(black, 0.1);
     font-size: 1rem;
+    transition: all .5s ease;
     &:hover {
       border-bottom: 1px solid rgba(black, 0.5);
     }
