--- a/src/app/components/landingpage/landingpage.component.html
+++ b/src/app/components/landingpage/landingpage.component.html
@@ -1,7 +1,6 @@
 <div class="body">
 <section class="container hero-section">
-    <img src="../../../assets/ec-lms.png" alt="abstract image of a team working">
-
+    <img src="https://educloud.app/lms/src/erp/ec-lms.png" alt="abstract image of a team working">
     <div class="hero-text my-3 text-center">
         Seamless Leave Requests, Enhanced Productivity – Try Our System Today
     </div>
