--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="body">
   <section class="hero-section">
     <img
-      src="../../../assets/Leave%20Management.svg"
+      src="https://technorishi.co.in/public/Asset/img/carousal/Leave%20Management.svg"
       alt="abstract image of a team working"
     />
     <p>
