--- a/src/app/client/leave-list/leave-list.component.html
+++ b/src/app/client/leave-list/leave-list.component.html
@@ -1,33 +1,33 @@
-<table mat-table matSort [dataSource]="dataSource">
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
   <!-- Position Column -->
   <ng-container matColumnDef="type">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>Type</th>
+    <th mat-header-cell *matHeaderCellDef>Type</th>
     <td mat-cell *matCellDef="let element">{{ element.type | uppercase }}</td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="reason">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>Reason</th>
+    <th mat-header-cell *matHeaderCellDef>Reason</th>
     <td mat-cell *matCellDef="let element">{{ element.reason }}</td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="from">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>From</th>
+    <th mat-header-cell *matHeaderCellDef>From</th>
     <td mat-cell *matCellDef="let element">
-      {{ element.from | date : "dd-MMM-yyyy" }}
+      {{ element.from | date : "dd-MMMM-yyyy" }}
     </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="to">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>To</th>
+    <th mat-header-cell *matHeaderCellDef>To</th>
     <td mat-cell *matCellDef="let element" >
       <span *ngIf="element.to">
-        {{ element.to  | date : "dd-MMM-yyyy"}}
+        {{ element.to  | date : "dd-MMMM-yyyy"}}
       </span>
       <span *ngIf="!element.to">
         NA
@@ -36,17 +36,16 @@
   </ng-container>
 
   <ng-container matColumnDef="status">
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>Status</th>
+    <th mat-header-cell *matHeaderCellDef>Status</th>
     <td mat-cell *matCellDef="let element" [class]="element.status">{{ element.status | uppercase}}</td>
   </ng-container>
 
   <ng-container matColumnDef="action" >
-    <th mat-header-cell mat-sort-header *matHeaderCellDef>Actions</th>
+    <th mat-header-cell *matHeaderCellDef>Actions</th>
     <td mat-cell *matCellDef="let element">
       <button
-        tuiButton
-        size="s"
-        appearance="secondary-destructive"
+        mat-mini-fab
+        color="warn"
         aria-label=" icon button with a delete icon"
         (click)="showDialog(delete)"
       >
@@ -57,8 +56,8 @@
         <div class="mb-2 h3">Confirm Delete</div>
         Are you sure you want to remove this leave request?
         <div class="my-3 ms-auto">
-          <button tuiButton size="m" appearance="flat" (click)="observer.complete()">Cancel</button>
-          <button tuiButton size="m" appearance="accent" (click)="onDelete(element.key)">
+          <button mat-flat-button (click)="observer.complete()">Cancel</button>
+          <button mat-raised-button color="warn" (click)="onDelete(element.key)">
             Delete
           </button>
         </div>
