--- a/src/app/components/sidenav/sidenav.component.scss
+++ b/src/app/components/sidenav/sidenav.component.scss
@@ -2,18 +2,7 @@
   height: 100%;
 }
 
-// .example-container {
-//   display: flex;
-//   flex-direction: column;
-//   position: absolute;
-//   top: 0;
-//   bottom: 0;
-//   left: 0;
-//   right: 0;
-// }
-
 .appbar {
-
   background-color: var(--tui-primary-active);
   color: white;
 }
@@ -27,3 +16,8 @@
   width: 200px;
 }
 
+.mat-toolbar.mat-primary {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
