--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -12,7 +12,7 @@
     <div class="h1 text-primary mt-4"><span class="text-success">Leave </span> Management System</div>
     <form class="login-form" [formGroup]="loginForm">
       <tui-loader size="xl" [showLoader]="load" [overlay]="true">
-        <h1 class="text-center tui-form__header">Login Form</h1>
+        <h1 class="text-center tui-form__header">Login </h1>
         <div>
           <p class="wrapper wrapper_dark">
             <tui-notification
