--- a/src/app/components/sidenav/sidenav.component.html
+++ b/src/app/components/sidenav/sidenav.component.html
@@ -55,7 +55,7 @@
       </button>
       <h1>Leave Management System </h1>
       <tui-svg
-        src="tuiIconLogOut"
+        src="tuiIconLogOutLarge"
         type="button"
         class="ms-auto"
         (click)="logout()"
