--- a/src/app/client/leave-form/leave-form.component.html
+++ b/src/app/client/leave-form/leave-form.component.html
@@ -1,50 +1,80 @@
 <div class="container py-3">
   <div class="form card-shadow my-3 p-5 container">
     <tui-loader [overlay]="true" [showLoader]="load">
-    <form [formGroup]="leaveForm" (ngSubmit)="onSubmit()">
-      <h3 class="text-center my-3">Apply Leave</h3>
-      <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Leave Type</mat-label>
-        <mat-select formControlName="type">
-          <mat-option *ngFor="let type of types"  [value]="type">
-            {{ type | uppercase }}
-          </mat-option>
-        </mat-select>
-      </mat-form-field>
-      <mat-form-field appearance="outline" style="width: 100%">
-        <mat-label>Reason</mat-label>
-        <input formControlName="reason" matInput type="text" />
-      </mat-form-field>
-      <mat-form-field appearance="outline" class="w-100 mb-3">
-        <mat-label>Enter a date range</mat-label>
-        <mat-date-range-input  [rangePicker]="picker">
-          <input
-            matStartDate
-            formControlName="from"
-            [min]="startDate"
-            placeholder="Start date"
-          />
-          <input matEndDate formControlName="to" placeholder="End date" />
-        </mat-date-range-input>
-        <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
-        <mat-datepicker-toggle
-          matIconSuffix
-          [for]="picker"
-        ></mat-datepicker-toggle>
-        <mat-date-range-picker #picker></mat-date-range-picker>
+      <form [formGroup]="leaveForm" (ngSubmit)="onSubmit()">
+        <tui-notification
+          status="error"
+          class="tui-space_vertical-2"
+          *ngIf="error"
+        >
+          {{ errorMsg }}
+        </tui-notification>
+        <tui-notification
+          status="success"
+          class="tui-space_vertical-2"
+          *ngIf="success"
+        >
+          {{ successMsg }}
+        </tui-notification>
+        <mat-form-field appearance="outline" class="w-100">
+          <mat-label>Leave Type</mat-label>
+          <mat-select formControlName="type">
+            <mat-option *ngFor="let type of types" [value]="type">
+              {{ type | uppercase }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-form-field appearance="outline" style="width: 100%">
+          <mat-label>Reason</mat-label>
+          <input formControlName="reason" matInput type="text" />
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="w-100 mb-3">
+          <mat-label>Enter a date range</mat-label>
+          <mat-date-range-input [rangePicker]="picker">
+            <input
+              matStartDate
+              formControlName="from"
+              placeholder="Start date"
+            />
+            <input matEndDate formControlName="to" placeholder="End date" />
+          </mat-date-range-input>
+          <mat-hint>MM/DD/YYYY – MM/DD/YYYY</mat-hint>
+          <mat-datepicker-toggle
+            matIconSuffix
+            [for]="picker"
+          ></mat-datepicker-toggle>
+          <mat-date-range-picker #picker></mat-date-range-picker>
 
-        <mat-error *ngIf="leaveForm.controls.from.hasError('matStartDateInvalid')"
-          >Invalid start date</mat-error
+          <mat-error
+            *ngIf="leaveForm.controls.from.hasError('matStartDateInvalid')"
+            >Invalid start date</mat-error
+          >
+          <mat-error *ngIf="leaveForm.controls.to.hasError('matEndDateInvalid')"
+            >Invalid end date</mat-error
+          >
+        </mat-form-field>
+        <button
+          style="float: right"
+          [disabled]="leaveForm.pristine"
+          color="warn"
+          (click)="leaveForm.reset()"
+          mat-fab
+          extended
         >
-        <mat-error *ngIf="leaveForm.controls.to.hasError('matEndDateInvalid')"
-          >Invalid end date</mat-error
+          Clear
+        </button>
+        <button
+          style="float: right; margin-right: 0.5rem"
+          [disabled]="leaveForm.invalid || leaveForm.pristine"
+          type="submit"
+          mat-fab
+          extended
+          color="primary"
         >
-      </mat-form-field>
-      <button style="float:right" [hidden]="leaveForm.invalid" color="warn" (click)="leaveForm.reset()" mat-fab extended>Clear</button>
-      <button style="float:right" [disabled]="leaveForm.invalid" type="submit" mat-fab extended color="primary">Apply
-    <tui-svg src="tuiIconCheck"></tui-svg>
-    </button>
-    </form>
-</tui-loader>
+          Apply
+          <tui-svg src="tuiIconCheck"></tui-svg>
+        </button>
+      </form>
+    </tui-loader>
   </div>
 </div>
