--- a/src/app/client/leave-list/leave-list.component.html
+++ b/src/app/client/leave-list/leave-list.component.html
@@ -1,22 +1,20 @@
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <!--- Note that these columns can be defined in any order.
-          The actual rendered columns are set as a property on the row definition" -->
+<table mat-table [dataSource]="dataSource" matSort>
 
   <!-- Position Column -->
   <ng-container matColumnDef="type">
-    <th mat-header-cell *matHeaderCellDef>Type</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Type</th>
     <td mat-cell *matCellDef="let element">{{ element.type | uppercase }}</td>
   </ng-container>
 
   <!-- Name Column -->
   <ng-container matColumnDef="reason">
-    <th mat-header-cell *matHeaderCellDef>Reason</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Reason</th>
     <td mat-cell *matCellDef="let element">{{ element.reason }}</td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="from">
-    <th mat-header-cell *matHeaderCellDef>From</th>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>From</th>
     <td mat-cell *matCellDef="let element">
       {{ element.from | date : "dd-MMMM-yyyy" }}
     </td>
@@ -24,43 +22,81 @@
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="to">
-    <th mat-header-cell *matHeaderCellDef>To</th>
-    <td mat-cell *matCellDef="let element" >
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>To</th>
+    <td mat-cell *matCellDef="let element">
       <span *ngIf="element.to">
-        {{ element.to  | date : "dd-MMMM-yyyy"}}
+        {{ element.to | date : "dd-MMMM-yyyy" }}
       </span>
-      <span *ngIf="!element.to">
-        NA
-      </span>
+      <span *ngIf="!element.to"> NA </span>
     </td>
   </ng-container>
 
   <ng-container matColumnDef="status">
-    <th mat-header-cell *matHeaderCellDef>Status</th>
-    <td mat-cell *matCellDef="let element" [class]="element.status">{{ element.status | uppercase}}</td>
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Status</th>
+    <td mat-cell *matCellDef="let element" [class]="element.status">
+      {{ element.status | uppercase }}
+    </td>
   </ng-container>
 
-  <ng-container matColumnDef="action" >
-    <th mat-header-cell *matHeaderCellDef>Actions</th>
+  <ng-container matColumnDef="action">
+    <th mat-header-cell *matHeaderCellDef mat-sort-header>Actions</th>
     <td mat-cell *matCellDef="let element">
       <button
-        mat-mini-fab
-        color="warn"
+        tuiButton
+        size="s"
+        appearance="secondary"
+        aria-label=" icon button with a delete icon"
+        (click)="showDialog(edit)"
+      >
+        <tui-svg src="tuiIconEdit"></tui-svg>
+      </button>
+
+
+      <button
+        tuiButton
+        size="s"
+        appearance="secondary-destructive"
         aria-label=" icon button with a delete icon"
         (click)="showDialog(delete)"
       >
-        <mat-icon>delete</mat-icon>
+        <tui-svg src="tuiIconTrash"></tui-svg>
       </button>
 
-      <ng-template let-observer #delete>
-        <div class="mb-2 h3">Confirm Delete</div>
-        Are you sure you want to remove this leave request?
-        <div class="my-3 ms-auto">
-          <button mat-flat-button (click)="observer.complete()">Cancel</button>
-          <button mat-raised-button color="warn" (click)="onDelete(element.key)">
-            Delete
-          </button>
-        </div>
+      <ng-template #delete let-observer>
+        <p class="text-danger h4">Confirm Delete</p>
+        <p>
+          Are you sure you want to withdraw this leave request ?
+        </p>
+        <button
+          tuiButton
+          appearance="flat"
+          type="button"
+          size="m"
+          (click)="observer.complete()"
+        >
+          Cancel
+        </button>
+        <button
+          tuiButton
+          appearance="secondary-destructive"
+          type="button"
+          size="m"
+          class="tui-space_right-3"
+          (click)="onDelete(element.key);observer.complete()"
+        >
+          Delete
+        </button>
+      </ng-template>
+
+      <ng-template let-observer #edit>
+        <h1 class="text-center my-1">Update Leave</h1>
+        <app-leave-form
+          [edit]="true"
+          [type]="element.type"
+          [reason]="element.reason"
+          [from]="element.from"
+          [to]="element.to"
+        ></app-leave-form>
       </ng-template>
     </td>
   </ng-container>
