--- a/src/app/manage-employees/list-employees/list-employees.component.html
+++ b/src/app/manage-employees/list-employees/list-employees.component.html
@@ -197,7 +197,7 @@
 
       </div>
     </tui-loader>
-    <button tuiButton appearance="secondary"  size="l" (click)="showDialog(form)" class="add-mobile d-block d-md-none">
+    <button tuiButton size="l" (click)="showDialog(form)" class="add-mobile d-block d-md-none">
       Add <tui-svg src="tuiIconUserPlus"></tui-svg>
 
       <!-- add user form -->
