--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -7,13 +7,16 @@
   color: white;
 }
 
-
 .is-active {
-  background-color: rgba(rgb(110, 101, 101),.5);
+  background-color: rgba(rgb(110, 101, 101), 0.5);
 }
 
 .sidenav {
   width: 200px;
+}
+
+.content {
+  margin-top:5rem;
 }
 
 .mat-toolbar.mat-primary {
