--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,22 @@
 <div class="body">
+
+  <!-- Hero section  -->
   <section class="hero-section">
     <img
-      src="https://technorishi.co.in/public/Asset/img/carousal/Leave%20Management.svg"
+      src="../../../assets/Leave%20Management.svg"
       alt="abstract image of a team working"
     />
-    <p>
-      Leave Management Made Simple: Focus on Work, We Handle the Rest
-    </p>
+    <p>Leave Management Made Simple: Focus on Work, We Handle the Rest</p>
   </section>
+
+  <!-- Login container -->
   <section class="login-container">
-    <div class="h1 text-primary mt-4"><span class="text-success">Leave </span> Management System</div>
+    <h1 class="text-primary mt-4">
+      <span class="text-success">Leave </span> Management System
+    </h1>
     <form class="login-form" [formGroup]="loginForm">
       <tui-loader size="xl" [showLoader]="load" [overlay]="true">
-        <h1 class="text-center tui-form__header">Login </h1>
+        <h1 class="text-center tui-form__header">Login</h1>
         <div>
           <p class="wrapper wrapper_dark">
             <tui-notification
