--- a/src/app/manage-employees/list-employees/list-employees.component.html
+++ b/src/app/manage-employees/list-employees/list-employees.component.html
@@ -1,9 +1,7 @@
 <div class="admin-body container">
   <!-- View employee list -->
 
-  <div class="pt-1 pt-lg-5">
-
-    <div class="d-flex justify-content-between align-items-center mb-3">
+    <div class="pt-1 pt-lg-5 d-flex justify-content-between align-items-center mb-3">
       <input
         matInput
         (keyup)="applyFilter($event)"
@@ -19,7 +17,12 @@
           size="s"
           (click)="loadUsers()"
         ></tui-svg>
-        <button tuiButton  size="m" (click)="showDialog(form)" class="d-none d-md-block">
+        <button
+          tuiButton
+          size="m"
+          (click)="showDialog(form)"
+          class="d-none d-md-block"
+        >
           Add <tui-svg src="tuiIconUserPlus"></tui-svg>
 
           <!-- add user form -->
@@ -43,6 +46,8 @@
           [dataSource]="dataSource"
           matSort
         >
+
+        <!-- Id column -->
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               ID
@@ -52,6 +57,7 @@
             </mat-cell>
           </ng-container>
 
+          <!-- Name column  -->
           <ng-container matColumnDef="name">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               NAME
@@ -61,6 +67,7 @@
             </mat-cell>
           </ng-container>
 
+          <!-- Email column -->
           <ng-container matColumnDef="email">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               EMAIL
@@ -70,6 +77,7 @@
             </mat-cell>
           </ng-container>
 
+          <!-- Position column -->
           <ng-container matColumnDef="position">
             <mat-header-cell *matHeaderCellDef mat-sort-header>
               POSITION
@@ -79,8 +87,9 @@
             </mat-cell>
           </ng-container>
 
+          <!-- Actions column -->
           <ng-container matColumnDef="action">
-            <mat-header-cell *matHeaderCellDef mat-sort-header
+            <mat-header-cell *matHeaderCellDef
               >ACTIONS</mat-header-cell
             >
             <mat-cell *matCellDef="let row" data-label="action">
@@ -194,10 +203,14 @@
           [pageSizeOptions]="[5, 10]"
           aria-label="Select page of users"
         ></mat-paginator>
-
       </div>
     </tui-loader>
-    <button tuiButton size="l" (click)="showDialog(form)" class="add-mobile d-block d-md-none">
+    <button
+      tuiButton
+      size="l"
+      (click)="showDialog(form)"
+      class="add-mobile d-block d-md-none"
+    >
       Add <tui-svg src="tuiIconUserPlus"></tui-svg>
 
       <!-- add user form -->
@@ -208,7 +221,5 @@
           [edit]="false"
         ></app-userform>
       </ng-template>
-
     </button>
-  </div>
 </div>
