--- a/src/app/manage-employees/userform/userform.component.html
+++ b/src/app/manage-employees/userform/userform.component.html
@@ -9,6 +9,9 @@
         <input tuiTextfield  placeholder="Enter Id" />
         <span class="tui-required"></span>
       </tui-input>
+      <div class="text-danger" *ngIf="userForm.controls['id'].errors?.useridExists">
+        This Id is already taken!
+      </div>
     </div>
     <div class="tui-form__multi-field">
       <tui-input formControlName="name" tuiHintContent="A tooltip">
