--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,4 @@
 <div class="body">
-
   <!-- Hero section  -->
   <section class="hero-section">
     <img
@@ -11,9 +10,11 @@
 
   <!-- Login container -->
   <section class="login-container">
-    <h1 class="text-primary mt-4">
+    <!-- <h1 class="text-primary mt-4">
       <span class="text-success">Leave </span> Management System
-    </h1>
+    </h1> -->
+
+    <img src="../../assets/logo.png" width="140" height="60" />
     <form class="login-form" [formGroup]="loginForm">
       <tui-loader size="xl" [showLoader]="load" [overlay]="true">
         <h1 class="text-center tui-form__header">Login</h1>
