updated client ui

--- a/src/app/client/leave-form/leave-form.component.html
+++ b/src/app/client/leave-form/leave-form.component.html
@@ -1,3 +1,4 @@
+<tui-loader [showLoader]="load" [overlay]="true">
 <div class="container">
     <form [formGroup]="leaveForm" class="form p-5 mb-3 container">
       <!-- Tui notifications -->
@@ -89,3 +90,4 @@
       </button>
     </form>
 </div>
+</tui-loader>
