--- a/src/app/manage-holidays/list-holidays/list-holidays.component.html
+++ b/src/app/manage-holidays/list-holidays/list-holidays.component.html
@@ -1,3 +1,5 @@
+<app-loader [load]="loader"></app-loader>
+
 <div class="body container">
   <div class="pt-2 pt-lg-5 d-flex justify-content-between align-items-center">
     <input
@@ -26,85 +28,89 @@
         Sort
         <tui-svg src="tuiIconSortOff"></tui-svg>
       </button>
-      <button tuiButton size="m" (click)="showDialog(form)" class=" d-none d-md-inline">
+      <button
+        tuiButton
+        size="m"
+        (click)="showDialog(form)"
+        class="d-none d-md-inline"
+      >
         Add <tui-svg src="tuiIconPlus"></tui-svg>
-    
+
         <!-- add user form -->
         <ng-template let-observer #form>
           <app-holidayform
             [observer]="observer"
-            (done)="observer.complete();addAlert();"
+            (done)="observer.complete(); addAlert()"
             [edit]="false"
           ></app-holidayform>
         </ng-template>
       </button>
     </div>
-
   </div>
-
-  <tui-loader size="xl" class="mt-3 mb-5" [showLoader]="loader" [overlay]="true">
-    <div class="row" cdkDropList (cdkDropListDropped)="drop($event)">
-      <div
-        class="col-12 col-md-4 col-lg-4 my-2"
-        *ngFor="let item of holidays"
-        cdkDrag
+  <div class="row" cdkDropList (cdkDropListDropped)="drop($event)">
+    <div
+      class="col-12 col-md-4 col-lg-4 my-2"
+      *ngFor="let item of holidays"
+      cdkDrag
+    >
+      <a
+        size="l"
+        class="card"
+        [ngClass]="upcomingDate(item.date) ? 'bg-green' : 'bg-grey'"
+        tuiIsland
       >
-        <a
-          size="l"
-          class="card"
-          [ngClass]="upcomingDate(item.date) ? 'bg-green' : 'bg-grey'"
-          tuiIsland
-          
-        >
-          <div class="tui-island__content">
-            <figure class="tui-island__figure">
-              <div
-                class="some-figure d-flex justify-content-center align-items-center"
-                (click)="showDialog(editform)"
-              >
-                <tui-svg type="button" src="tuiIconEditLarge"></tui-svg>
+        <div class="tui-island__content">
+          <figure class="tui-island__figure">
+            <div
+              class="some-figure d-flex justify-content-center align-items-center"
+              (click)="showDialog(editform)"
+            >
+              <tui-svg type="button" src="tuiIconEditLarge"></tui-svg>
 
-                <ng-template #editform let-observer>
-                  <app-holidayform
-                    [Index]="item.key"
-                    [Name]="item.name"
-                    [type]="item.type"
-                    [date]="item.date"
-                    [edit]="true"
-                    (done)="observer.complete();addAlert();"
-                  ></app-holidayform>
-                </ng-template>
-              </div>
-            </figure>
-            <div>
-              <h3 class="tui-island__title">{{ item.name }}</h3>
-              <p class="tui-island__category">
-                {{ item.type }}
-              </p>
-              <p class="tui-island__paragraph">
-                {{ item.date | date : "dd-MMM"
-                }}{{ upcomingDate(item.date) ? "(Upcoming)" : "" }}
-              </p>
+              <ng-template #editform let-observer>
+                <app-holidayform
+                  [Index]="item.key"
+                  [Name]="item.name"
+                  [type]="item.type"
+                  [date]="item.date"
+                  [edit]="true"
+                  (done)="observer.complete(); addAlert()"
+                ></app-holidayform>
+              </ng-template>
             </div>
+          </figure>
+          <div>
+            <h3 class="tui-island__title">{{ item.name }}</h3>
+            <p class="tui-island__category">
+              {{ item.type }}
+            </p>
+            <p class="tui-island__paragraph">
+              {{ item.date | date : "dd-MMM"
+              }}{{ upcomingDate(item.date) ? "(Upcoming)" : "" }}
+            </p>
           </div>
-        </a>
-      </div>
+        </div>
+      </a>
     </div>
-  </tui-loader>
+  </div>
 
   <!-- Add holidays button for mobile -->
 
-  <button tuiButton   size="l" (click)="showDialog(form)" class="add-mobile d-block d-md-none">
+  <button
+    tuiButton
+    size="l"
+    (click)="showDialog(form)"
+    class="add-mobile d-block d-md-none"
+  >
     Add <tui-svg src="tuiIconPlus"></tui-svg>
 
     <!-- add holiday form -->
     <ng-template let-observer #form>
       <app-holidayform
         [observer]="observer"
-        (done)="observer.complete();addAlert();"
+        (done)="observer.complete(); addAlert()"
         [edit]="false"
       ></app-holidayform>
     </ng-template>
   </button>
-
 </div>
