--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -49,6 +49,11 @@
       box-shadow: rgba(black, 0.1) 0px 20px 30px;
     }
   }
+  .custom-text {
+    font-family: Arial, sans-serif;
+    font-weight: bold;
+    color: #ffffff;
+  }
   button {
     margin: 0 auto;
   }
