--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -24,11 +24,12 @@
         <tui-svg src="tuiIconMenuLarge" type="submit" (click)="sidenav = !sidenav"></tui-svg>
       </div>
       <img
-        src="../../../../assets/logo-trans.png"
+        src="https://th.bing.com/th/id/R.d3d5cc505e282abe3b78e192f7cefd28?rik=nfbKXqVnHV14mg&riu=http%3a%2f%2fgetdrawings.com%2ffree-icon%2fstaff-icon-58.png&ehk=iKxsymiOZNIozsofUdJ7UJewaQRp97wouUgsj2ALvgI%3d&risl=&pid=ImgRaw&r=0"
         alt="logo"
-        width="130"
-        height="50"
+        width="8%"
+        height="5%"
       />
+      <p> Employee Management</p>
       <div class="hover" (click)="showDialog(logoutdialog)">
         <span *ngIf="!(isHandset$ | async)">Logout </span> <tui-svg src="tuiIconLogOutLarge"></tui-svg>
         <ng-template #logoutdialog let-observer>
