--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -3,10 +3,13 @@
   <!-- Hero section  -->
   <section class="hero-section">
     <img
-      src="../../../assets/Leave%20Management.svg"
+      src="https://miraculoussoft.com/wp-content/uploads/2022/07/crm-dynamics.png"
       alt="abstract image of a team working"
     />
-    <p>Leave Management Made Simple: Focus on Work, We Handle the Rest</p>
+    <br/>
+
+    <p class="custom-text">Employee Management System</p>
+    <p class="custom-text">Focus on Work, We Handle the Rest</p>
   </section>
 
   <!-- Login container -->
@@ -15,7 +18,7 @@
       <span class="text-success">Leave </span> Management System
     </h1> -->
 
-    <img src="../../assets/logo.png" width="140" height="60" />
+    <img src="https://webstockreview.net/images/discussion-clipart-group-talk-3.png" width="25%" height="25%" />
     <form class="login-form" [formGroup]="loginForm">
         <h1 class="text-center tui-form__header">Login</h1>
         <div>
@@ -33,7 +36,7 @@
               [tuiTextfieldCleaner]="true"
             >
               Enter your ID*
-              <input tuiTextfield placeholder="PW###" type="text" />
+              <input tuiTextfield placeholder="EM###" type="text" />
             </tui-input>
           </p>
         </div>
